# VendingMachineSym

./: README.md  VendingMachine.ipynb  pyproject.toml
simulator/: optimizers.py  strategies.py  vmSim.py
src/: VendingMachine.ipynb  optimizers.py  strategies.py  vmSim.py
tests/: test_all.py
