[tool.poetry]
name = "vendingmachinesym"
version = "0.2.0"
description = "Vending Machine Description"
authors = ["Andrey <andrey@mytenten.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.1"
numpy = "^1.22"
ipympl = "^0.8.8"
jupyter = "^1.0.0"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
ubelt = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
